# godaddy-rust

./: Cargo.toml  README.md
docs/: abuse.md  aftermarket.md  agreements.md  ans.md  auctions.md  certificates.md  countries.md  domains.md  orders.md  parking.md  shoppers.md  subscriptions.md
src/: api_client.rs  client.rs  config.rs  error.rs  http.rs  lib.rs
src/dto/: mod.rs
src/dto/abuse/request/: create_ticket_request.rs  create_ticket_v2_request.rs  get_ticket_info_request.rs  get_ticket_info_v2_request.rs  get_tickets_request.rs  get_tickets_v2_request.rs  mod.rs
src/dto/abuse/response/: create_ticket_response.rs  create_ticket_v2_response.rs  get_ticket_info_response.rs  get_ticket_info_v2_response.rs  get_tickets_response.rs  get_tickets_v2_response.rs  mod.rs
src/dto/aftermarket/request/: add_expiry_listings_request.rs  delete_listings_request.rs  get_listings_request.rs  mod.rs
src/dto/aftermarket/response/: add_expiry_listings_response.rs  delete_listings_response.rs  get_listings_response.rs  mod.rs
src/dto/agreements/request/: get_request.rs  mod.rs
src/dto/agreements/response/: mod.rs
src/dto/ans/request/: get_agent_csr_status_by_agent_id_request.rs  (+12 more)
src/services/: abstract_service.rs  abuse_service.rs  aftermarket_service.rs  agreements_service.rs  ans_service.rs  auctions_service.rs  certificates_service.rs  countries_service.rs  domains_service.rs  mod.rs  orders_service.rs  parking_service.rs  shoppers_service.rs  subscriptions_service.rs
tests/: error_mapping.rs  generated_services.rs  query_encoding.rs
tests/support/: mod.rs
(+243 files in other folders)
